added live search feature to contact list, search name/email/phone

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,27 @@
 <h1>Home Page</h1>
+
+<button id="load_contacts">Load contacts</button><br>
+<br>
+<fieldset>
+  <legend>Add Contact</legend>
+  <input type="text" id="name" placeholder="Full Name"><br>
+  <input type="text" id="email" placeholder="Email"><br>
+  <input type="text" id="phone" placeholder="Phone"><br>
+  <button id="new_contact">Add Contact</button><br>
+</fieldset>
+<fieldset>
+<legend>Search Contacts</legend>
+<input type="text" id="search_contact"><br>
+</fieldset>
+<br>
+<table id="contacts">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Email</th>
+      <th>Phone Number</th>
+    </tr>
+  </thead>
+    <tbody>
+    </tbody>
+</table>
